2007-08-20  Junichi Uekawa  <dancer@debian.org>

	* Makefile: update makefile to install lvmbuilder

	* examples/lvmpbuilder/lvmbuilder: update with new version.
	
2007-07-27  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: add document on example usage of
	pbuilderrc with DIST env-var.

2007-07-22  Junichi Uekawa  <dancer@debian.org>

	* Documentation/pbuilder-doc.xml: refer to example file.

	* examples/pbuilderrc.ccache: create example file.

2007-07-16  Junichi Uekawa  <dancer@debian.org>

	* Documentation/debconf7/develcycle.dot: change diagram to contain
	testing pbuilder-generated package before debsign and dput.

2007-06-23  Junichi Uekawa  <dancer@debian.org>

	* Makefile: install lvmpbuilder scripts as example.

	* Documentation/pbuilder-doc.xml: document the files

	* Makefile: install pbuilder-test sample files.

	* examples/pbuilder-test/README: install pbuilder-test sample files.
	000_prepinstall
	001_apprun
	002_libfile
	002_sample.c
	003_makecheck
	004_ldd

	* examples/pbuilder-distribution.sh: $@ -> "$@"

2007-06-17  Junichi Uekawa  <dancer@debian.org>

	* pbuilder.8: fix incorrect banners in execution example.
	reorganize command-line parameters to be prepended with a '--', in
	par with cowdancer which uses getopt_long. getopt_long requires
	the '--'.

2007-06-16  Junichi Uekawa  <dancer@debian.org>

	* pbuilder: rm "$APTCACHE"/*, instead of cleaning subdirectories. 
	Subdirectories shouldn't usually be created.

2007-06-15  Junichi Uekawa  <dancer@debian.org>

	* pbuilderrc.5: reorganize to maintain same ordering as pbuilder.8

	* pbuilder.8: reorganize the ordering of options.

2007-06-07  Junichi Uekawa  <dancer@debian.org>

	* Makefile (install): install rebuild example scripts.

	* examples/rebuild/getlist: 
	* examples/rebuild/buildall: 
	* examples/rebuild/README: add example rebuilding script.
	
2007-06-05  Junichi Uekawa  <dancer@debian.org>

	* AUTHORS: add people

2007-06-04  Junichi Uekawa  <dancer@debian.org>
