@@ -18,6 +18,8 @@
 #
 # module to satisfy build dependencies; default flavor
 
+# The original pbuilder-satisfydepends code, which is now called 'classic'
+
 set -e
 
 . /usr/lib/pbuilder/pbuilder-satisfydepends-funcs
