@@ -260,13 +260,16 @@ in
 .TP
 .BI "PBUILDERSATISFYDEPENDSCMD=" "/usr/lib/pbuilder/pbuilder-satisfydepends"
 
-This option is used by various parts of pbuilder to satisfy (i.e. install) the
-build-dependencies of a package.  There are two alternate implementations, the
-"experimental" implementation, "pbuilder-satisfydepends-experimental", which
-might be useful to pull packages from experimental or from repositories with a
-low APT Pin Priority, and the "aptitude" implementation, which will resolve
-build-dependencies and build-conflicts with aptitude which helps dealing with
-complex cases but does not support unsigned APT repositories
+This option is used by various parts of pbuilder to satisfy
+(i.e. install) the build-dependencies of a package.  There are three
+implementations, the "experimental" implementation,
+"pbuilder-satisfydepends-experimental", which might be useful to pull
+packages from experimental or from repositories with a low APT Pin
+Priority, the "aptitude" implementation, which will resolve
+build-dependencies and build-conflicts with aptitude which helps
+dealing with complex cases but does not support unsigned APT
+repositories, and the "classic" implementation, which is the original
+implementation used until 0.172. The default is now "aptitude".
 
 .TP
 .BI "BUILDUSERID=" "1234"
