@@ -6,8 +6,12 @@ pbuilder (0.172) UNRELEASED; urgency=low
 
   [ Junichi Uekawa ]
   * update lvmpbuilder, thanks to Kapil Hari Paranjape (closes: #389884)
+  * rename pbuilder-satisfydepends to pbuilder-satisfydepends-classic, and
+    install pbuilder-satisfydepends-aptitude as the deafault
+    pbuilder-satisfydepends
+  * install aptitude per default in chroot.
 
- -- Junichi Uekawa <dancer@debian.org>  Mon, 20 Aug 2007 08:01:04 +0900
+ -- Junichi Uekawa <dancer@debian.org>  Tue, 28 Aug 2007 09:30:55 +0900
 
 pbuilder (0.171) unstable; urgency=low
 
