@@ -1,3 +1,13 @@
+2007-08-28  Junichi Uekawa  <dancer@debian.org>
+
+	* pbuilderrc.5 (Example): document
+	pbuilder-satisfydepends-aptitude as the default.
+
+	* pbuilder-updatebuildenv: install aptitude per default.
+	* pbuilder-createbuildenv: install aptitude per default.
+
+	* pbuilder-satisfydepends-classic: rename to '-classic'.
+
 2007-08-20  Junichi Uekawa  <dancer@debian.org>
 
 	* Makefile: update makefile to install lvmbuilder
